--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "virtual-event-starter-kit",
-  "description": "Starter kit for your virtual event.",
-  "private": true,
-  "repository": "vercel/virtual-event-starter-kit",
-  "author": "Vercel Inc.",
-  "homepage": "https://demo.vercel.events",
+  "name": "festival-fruta-preta",
+  "description": "Festival online livestream fruta preta from kit for your virtual event next.js.",
+  "private": false,
+  "repository": "selique/festival-fruta-preta",
+  "author": "Moisés Lopes Ferreira",
+  "homepage": "https://festival-fruta-preta.vercel.app",
   "license": "Apache-2.0",
   "engines": {
     "node": "12.x"
@@ -44,11 +44,11 @@
     "@types/htmlescape": "1.1.1",
     "@types/ioredis": "4.17.9",
     "@types/ms": "0.7.31",
-    "@types/node": "12.19.8",
+    "@types/node": "^14.14.22",
     "@types/nprogress": "0.2.0",
     "@types/puppeteer-core": "2.0.0",
     "@types/reach__skip-nav": "0.1.1",
-    "@types/react": "17.0.0",
+    "@types/react": "^17.0.0",
     "@types/smoothscroll-polyfill": "0.3.1",
     "@types/validator": "13.1.1",
     "@typescript-eslint/eslint-plugin": "4.10.0",
@@ -57,10 +57,11 @@
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-hover-media-feature": "1.0.0",
+    "postcss-hover-media-feature": "^1.0.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "2.2.1",
-    "typescript": "4.1.3"
+    "typescript": "^4.1.3"
   }
 }
