--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "repository": "selique/festival-fruta-preta",
   "author": "Moisés Lopes Ferreira",
-  "homepage": "https://festival-fruta-preta.vercel.app",
+  "homepage": "https://frutapreta.com.br",
   "license": "Apache-2.0",
   "engines": {
     "node": "12.x"
