--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@agility/content-fetch": "1.0.0",
     "@agility/content-sync": "0.1.23",
     "@reach/skip-nav": "0.12.1",
+    "@types/next": "^9.0.0",
+    "@zeit/next-typescript": "^1.1.1",
     "chrome-aws-lambda": "5.5.0",
     "classnames": "2.2.6",
     "cookie": "0.4.1",
@@ -44,11 +46,11 @@
     "@types/htmlescape": "1.1.1",
     "@types/ioredis": "4.17.9",
     "@types/ms": "0.7.31",
-    "@types/node": "12.19.8",
+    "@types/node": "^14.14.22",
     "@types/nprogress": "0.2.0",
     "@types/puppeteer-core": "2.0.0",
     "@types/reach__skip-nav": "0.1.1",
-    "@types/react": "17.0.0",
+    "@types/react": "^17.0.0",
     "@types/smoothscroll-polyfill": "0.3.1",
     "@types/validator": "13.1.1",
     "@typescript-eslint/eslint-plugin": "4.10.0",
@@ -57,10 +59,11 @@
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-hover-media-feature": "1.0.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "2.2.1",
-    "typescript": "4.1.3"
+    "typescript": "^4.1.3"
   }
 }
