--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -20,6 +20,6 @@
       "@styles/*": ["styles/*"]
     }
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules",".npm",".yarn"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
