--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "next",
     "start": "next start -p $PORT",
     "build": "next build",
-    "license": "addlicense -l apache -c 'Vercel Inc.' components/**/* lib/**/* pages/**/* styles/**/* *.ts *.js"
+    "ngrok": "ngrok http 3000",
+    "license": "addlicense -l apache -c 'Festival Fruta-Preta Inc.' components/**/* lib/**/* pages/**/* styles/**/* *.ts *.js"
   },
   "dependencies": {
     "@agility/content-fetch": "1.0.0",
@@ -30,11 +31,13 @@
     "ioredis": "4.19.4",
     "ms": "2.1.3",
     "next": "10.0.3",
+    "next-videos": "1.4.0",
     "nprogress": "0.2.0",
     "puppeteer-core": "5.5.0",
     "react": "17.0.1",
     "react-aria": "3.2.0",
     "react-dom": "17.0.1",
+    "react-responsive-masonry": "^2.1.1",
     "smoothscroll-polyfill": "0.4.4",
     "swr": "0.3.9",
     "validator": "13.5.2",
@@ -59,6 +62,7 @@
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "ngrok": "^3.4.0",
     "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-hover-media-feature": "1.0.0",
