--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/classnames": "2.2.11",
     "@types/cookie": "0.4.0",
+    "@types/gtag.js": "^0.0.4",
     "@types/htmlescape": "1.1.1",
     "@types/ioredis": "4.17.9",
     "@types/ms": "0.7.31",
